Fix button spacing on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,8 @@
 }
 
 .content {
-
-  padding-top: 1vh;
-  padding-bottom: 1vh;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
 }
 
 .indented {
